--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
       <ul>
         <li>bricks<li>
         <li>mortar<li>
+        <li>sand<li>
         <li><li>
         <li><li>
         <li><li>
